force-app/main/default/objects/faculty__c/faculty__c.object-meta.xml
<CustomObject>
    <label>faculty</label>
    <nameField>
        <label>faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>facultys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>