force-app/main/default/objects/faculty__c/fields/Highest_amount__c.field-meta.xml
<CustomField>
    <fullName>Highest_amount__c</fullName>
    <label>Highest amount</label>
    <summarizedField>payment__c.amount__c</summarizedField>
    <summaryForeignKey>payment__c.faculty__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>