force-app/main/default/objects/faculty__c/fields/Mininum_amount__c.field-meta.xml
<CustomField>
    <fullName>Mininum_amount__c</fullName>
    <label>Mininum amount</label>
    <summarizedField>payment__c.amount__c</summarizedField>
    <summaryForeignKey>payment__c.faculty__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>