force-app/main/default/objects/faculty__c/fields/No_of_payments__c.field-meta.xml
<CustomField>
    <fullName>No_of_payments__c</fullName>
    <description>Total number of payments given to the faculty</description>
    <label>No.of payments</label>
    <summaryForeignKey>payment__c.faculty__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>