force-app/main/default/objects/faculty__c/fields/Total_amount_given__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_given__c</fullName>
    <label>Total amount given</label>
    <summarizedField>payment__c.amount__c</summarizedField>
    <summaryForeignKey>payment__c.faculty__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>