force-app/main/default/objects/faculty__c/recordTypes/full_time.recordType-meta.xml
<RecordType>
    <fullName>full_time</fullName>
    <active>true</active>
    <label>full time</label>
</RecordType>