force-app/main/default/objects/faculty__c/recordTypes/part_time.recordType-meta.xml
<RecordType>
    <fullName>part_time</fullName>
    <active>true</active>
    <label>part time</label>
</RecordType>